refractor: bugs fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -138,10 +138,10 @@ a {
 .palin {
   position: absolute;
   margin: 0 0 0 70px;
-  border-radius: 0 0 30px 0;
-  top: 0px;
-  padding: 15px 30px 25px 0px;
-  left: -260px;
+  border-radius: 30px 0 30px 0;
+  bottom: 0px;
+  padding: 20px 30px 20px 20px;
+  right: 0;
   text-align: left;
   background: #ff7934;
   overflow: hidden;
@@ -152,13 +152,10 @@ a {
   color: #fff7ed;
 }
 
-.palin:hover{
-  /* padding: 35px 30px; */
-  transition: all 0.5s;
-  left: -70px;
-  padding: 20px 30px 25px 30px;
-  /* font-size: 20px; */
+.palin span {
+  padding: 20px 0 20px 0;
 }
+
 .palin-text {
   width: 500px;
 }
