--- a/src/styles.css
+++ b/src/styles.css
@@ -229,15 +229,29 @@ input[type = "submit"] {
   ol {
     font-size: 18px;
   }
+  .palin {
+    top: 20px;
+    right: 20px;
+    bottom: auto;
+    width:80vw;
+    border-radius: 10px;
+    padding: 15px 0 5px 0;
+    margin: 0;
+    height: 30px;
+    text-align: center;
+  }
 }
 
 @media screen and (max-width: 499px) {
   h1 {
-    margin-top: 50px;
+    margin-top: 100px;
     width: 300px;
   }
   img {
     height: 300px;
+  }
+  .palin {
+    width: 78vw;
   }
 }
 
@@ -275,6 +289,11 @@ input[type = "submit"] {
   }
   img {
     height: 200px;
+  }
+  .palin {
+    width: 70vw;
+    height: 40px;
+    padding: 10px 10px 5px;
   }
 }
 
